docker-compose/templates/auth-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: auth-backend
  name: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/auth: "true"
        io.kompose.service: auth-backend
    spec:
      containers:
        - env:
            - name: LOGSTASH_URL
              value: logstash:5000
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://db:5432/appreservas?currentSchema=auth
          image: auth-backend
          name: auth-backend
          ports:
            - containerPort: 8085
          resources: {}
      restartPolicy: Always
status: {}
