docker-compose/templates/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/auth: "true"
        io.kompose.service: logstash
    spec:
      containers:
        - env:
            - name: LS_JAVA_OPTS
              value: -Xmx256m -Xms256m
          image: docker.elastic.co/logstash/logstash:8.3.3
          name: logstash-springboot
          ports:
            - containerPort: 5044
            - containerPort: 5000
            - containerPort: 5000
              protocol: UDP
            - containerPort: 9600
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/logstash/config/logstash.yml
              name: logstash-claim0
              readOnly: true
            - mountPath: /usr/share/logstash/pipeline
              name: logstash-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: logstash-claim0
          persistentVolumeClaim:
            claimName: logstash-claim0
            readOnly: true
        - name: logstash-claim1
          persistentVolumeClaim:
            claimName: logstash-claim1
            readOnly: true
status: {}
