docker-compose/templates/auth-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: auth
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/auth: "true"
  podSelector:
    matchLabels:
      io.kompose.network/auth: "true"
